--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,9 @@
     @apply text-xs text-gray-500;
   }
 }
+
+@layer utilities {
+  .bg-brand-gradient {
+    background-image: linear-gradient(#3490dc, #6574cd);
+  }
+}
